# commonlibrary_qrcode_generator

./: BUILD.GN  BUILD.gn  OAT.xml  README.md  README_zh.md  bundle.json
frameworks/: qrcode_generator.cpp  qrcode_item.cpp  qrcode_mask.cpp  qrcode_rscode.cpp  qrcode_stream.cpp  qrcode_string.cpp  qrcode_version.cpp
interfaces/innerkits/: qrcode_inner.h  qrcode_item.h  qrcode_list.h  qrcode_mask.h  qrcode_rscode.h  qrcode_stream.h  qrcode_version.h
interfaces/kits/: qrcode_generator.h
patches/: patches.json
test/: BUILD.gn
test/uinittest/common/: BUILD.gn  qrcode_item_test.cpp  qrcode_mask_test.cpp  qrcode_rscode_test.cpp  qrcode_stream_test.cpp  qrcode_version_test.cpp
test/unittest/common/: BUILD.gn  qrcode_generator_test.cpp  qrcode_mask_test.cpp  qrcode_mock_test.cpp  qrcode_string_test.cpp
