# Copyright (c) 2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")

if (os_level != "mini") {
  module_output_path = "qrcodegenerator/qrcodegenerator"

  config("module_private_config") {
    visibility = [ ":*" ]

    include_dirs = [
      "../../../interfaces/innerkits",
      "../../../interfaces/kits",
      "../../../",
    ]

    cflags = [ "--coverage" ]
    cflags_cc = [ "--coverage" ]
    ldflags = [ "--coverage" ]
  }

  common_sources = [
    "../../../frameworks/qrcode_generator.cpp",
    "../../../frameworks/qrcode_item.cpp",
    "../../../frameworks/qrcode_mask.cpp",
    "../../../frameworks/qrcode_rscode.cpp",
    "../../../frameworks/qrcode_stream.cpp",
    "../../../frameworks/qrcode_string.cpp",
    "../../../frameworks/qrcode_version.cpp",
  ]

  ohos_unittest("QrcodeGeneratorTest") {
    module_out_path = module_output_path

    sources = common_sources
    sources += [ "qrcode_generator_test.cpp" ]

    configs = [ ":module_private_config" ]

    external_deps = [
      "bounds_checking_function:libsec_static",
      "googletest:gtest_main",
    ]
  }

  ohos_unittest("QrcodeVersionTest") {
    module_out_path = module_output_path

    sources = common_sources
    sources += [ "qrcode_version_test.cpp" ]

    configs = [ ":module_private_config" ]

    external_deps = [
      "bounds_checking_function:libsec_static",
      "googletest:gtest_main",
    ]
  }

  ohos_unittest("QrcodeItemTest") {
    module_out_path = module_output_path

    sources = common_sources
    sources += [ "qrcode_item_test.cpp" ]

    configs = [ ":module_private_config" ]

    external_deps = [
      "bounds_checking_function:libsec_static",
      "googletest:gtest_main",
    ]
  }

  ohos_unittest("QrcodeStreamTest") {
    module_out_path = module_output_path

    sources = common_sources
    sources += [ "qrcode_stream_test.cpp" ]

    configs = [ ":module_private_config" ]

    external_deps = [
      "bounds_checking_function:libsec_static",
      "googletest:gtest_main",
    ]
  }

  ohos_unittest("QrcodeMaskTest") {
    module_out_path = module_output_path

    sources = common_sources
    sources += [ "qrcode_mask_test.cpp" ]

    configs = [ ":module_private_config" ]

    external_deps = [
      "bounds_checking_function:libsec_static",
      "googletest:gtest_main",
    ]
  }

  ohos_unittest("QrcodeRscodeTest") {
    module_out_path = module_output_path

    sources = common_sources
    sources += [ "qrcode_rscode_test.cpp" ]

    configs = [ ":module_private_config" ]

    external_deps = [
      "bounds_checking_function:libsec_static",
      "googletest:gtest_main",
    ]
  }
}

group("unittest") {
  testonly = true
  if (os_level != "mini") {
    deps = [
      ":QrcodeGeneratorTest",
      ":QrcodeVersionTest",
      ":QrcodeItemTest",
      ":QrcodeStreamTest",
      ":QrcodeMaskTest",
      ":QrcodeRscodeTest",
    ]
  }
}